default/objects/Service__c/Service__c.object-meta.xml
<CustomObject>
    <label>Service</label>
    <nameField>
        <displayFormat>SE - {00000}</displayFormat>
        <label>Services Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>