default/objects/Service__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Claim</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>