default/objects/Service__c/fields/DateTimeMaterialPending__c.field-meta.xml
<CustomField>
    <fullName>DateTimeMaterialPending__c</fullName>
    <description>Used for Task Logic</description>
    <label>Date Time  Material Pending</label>
    <type>DateTime</type>
</CustomField>