default/objects/Service__c/fields/DateTimePendingDrying__c.field-meta.xml
<CustomField>
    <fullName>DateTimePendingDrying__c</fullName>
    <label>Date Time Pending Drying</label>
    <type>DateTime</type>
</CustomField>