default/objects/Service__c/fields/DateTimePendingPolicyHolder__c.field-meta.xml
<CustomField>
    <fullName>DateTimePendingPolicyHolder__c</fullName>
    <label>Date Time Pending Policy Holder</label>
    <type>DateTime</type>
</CustomField>