default/objects/Service__c/fields/ExpertAssessmentStatus__c.field-meta.xml
<CustomField>
    <fullName>ExpertAssessmentStatus__c</fullName>
    <description>Campo de texto apenas para ser usado no Record Type Expert Assessment</description>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>