default/objects/Service__c/fields/ExpertAssessmentType__c.field-meta.xml
<CustomField>
    <fullName>ExpertAssessmentType__c</fullName>
    <label>Assessment Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>