default/objects/Service__c/fields/ExpertAssignmentReason__c.field-meta.xml
<CustomField>
    <fullName>ExpertAssignmentReason__c</fullName>
    <label>Expert Assignment Reason</label>
    <type>TextArea</type>
</CustomField>