default/objects/Service__c/fields/ExpertCreationReason__c.field-meta.xml
<CustomField>
    <fullName>ExpertCreationReason__c</fullName>
    <label>Creation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>