default/objects/Service__c/fields/ExpertEmail__c.field-meta.xml
<CustomField>
    <fullName>ExpertEmail__c</fullName>
    <label>Expert Email</label>
    <type>Email</type>
</CustomField>