default/objects/Service__c/fields/ExpertMobile__c.field-meta.xml
<CustomField>
    <fullName>ExpertMobile__c</fullName>
    <label>Expert Mobile</label>
    <type>Phone</type>
</CustomField>