default/objects/Service__c/fields/ExpertName__c.field-meta.xml
<CustomField>
    <fullName>ExpertName__c</fullName>
    <label>Expert Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>