default/objects/Service__c/fields/ExpertPhone__c.field-meta.xml
<CustomField>
    <fullName>ExpertPhone__c</fullName>
    <label>Expert Phone</label>
    <type>Phone</type>
</CustomField>