default/objects/Service__c/fields/ExpertReference__c.field-meta.xml
<CustomField>
    <fullName>ExpertReference__c</fullName>
    <label>Expert Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>