default/objects/Service__c/fields/ExpertReport__c.field-meta.xml
<CustomField>
    <fullName>ExpertReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expert Report</label>
    <type>Checkbox</type>
</CustomField>