default/objects/Service__c/fields/LastIntegrationDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastIntegrationDateTime__c</fullName>
    <label>Last Integration Date Time</label>
    <type>DateTime</type>
</CustomField>