default/objects/Service__c/fields/LastIntegrationDescription__c.field-meta.xml
<CustomField>
    <fullName>LastIntegrationDescription__c</fullName>
    <label>Last Integration Description</label>
    <type>TextArea</type>
</CustomField>