default/objects/Service__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>