default/objects/Service__c/fields/ReopeningApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ReopeningApprovalStatus__c</fullName>
    <label>Reopening Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>