default/objects/Service__c/fields/Situation__c.field-meta.xml
<CustomField>
    <fullName>Situation__c</fullName>
    <label>Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Policyholder</fullName>
            </value>
            <value>
                <fullName>Pending Adjuster</fullName>
            </value>
            <value>
                <fullName>Pending Insurance Company</fullName>
            </value>
            <value>
                <fullName>Pending Platform</fullName>
            </value>
            <value>
                <fullName>Pending Responsible Party</fullName>
            </value>
            <value>
                <fullName>Pending Claimant</fullName>
            </value>
            <value>
                <fullName>Pending Material</fullName>
            </value>
            <value>
                <fullName>Pending Drying</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>