default/objects/Service__c/fields/Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stakeholder</label>
    <referenceTo>Stakeholders__c</referenceTo>
    <relationshipName>StakeholderContacts</relationshipName>
    <type>Lookup</type>
</CustomField>