default/objects/Service__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apertura</fullName>
                <default>true</default>
                <label>Apertura</label>
            </value>
            <value>
                <fullName>Presupuestacion</fullName>
            </value>
            <value>
                <fullName>En Ejecucion de Trabajos</fullName>
            </value>
            <value>
                <fullName>Servicio Cerrado</fullName>
            </value>
            <value>
                <fullName>Cierre Parcial</fullName>
            </value>
            <value>
                <fullName>Cancelado/Anulado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>