default/objects/Service__c/fields/TotalAmountWithVAT__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountWithVAT__c</fullName>
    <label>Total Amount With VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>