default/objects/Service__c/fields/VATAmount__c.field-meta.xml
<CustomField>
    <fullName>VATAmount__c</fullName>
    <label>VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>