default/objects/Service__c/recordTypes/ExpertAssessment.recordType-meta.xml
<RecordType>
    <fullName>ExpertAssessment</fullName>
    <active>true</active>
    <label>Expert Assessment</label>
</RecordType>