default/objects/Service__c/recordTypes/Multiguild.recordType-meta.xml
<RecordType>
    <fullName>Multiguild</fullName>
    <active>true</active>
    <label>Multiguild</label>
</RecordType>